# video

./: CMakeLists.txt  README  video.kdev4
.github/workflows/: build.yml
src/: filenamedelegate.cpp  filenamedelegate.h  indexedfilemodel.cpp  indexedfilemodel.h  main.cpp  player.cpp  player.h  video.cpp  video.h  video.ui
